RESOLVED FIXED94265
popstate is fired at the wrong time on load
https://bugs.webkit.org/show_bug.cgi?id=94265
Summary popstate is fired at the wrong time on load
Glenn Maynard
Reported 2012-08-16 16:34:44 PDT
Created attachment 158938 [details] test When loading a page, the following should not alert: <!doctype html><script>window.onpopstate = function(event) { alert("onpopstate"); }</script> because the spec path that leads to the event being fired (http://www.whatwg.org/specs/web-apps/current-work/#read-html "update the session history with the new page") happens before any script execution, so when it's fired, window.onpopstate has not been set yet. Firefox doesn't alert. It's less clear to me whether <body onpopstate="alert('test')"> should alert. I don't think it's intended to, but I have an open question about this (http://lists.whatwg.org/htdig.cgi/whatwg-whatwg.org/2012-August/036926.html).
Attachments
test (102 bytes, text/html)
2012-08-16 16:34 PDT, Glenn Maynard
no flags
Patch (28.30 KB, patch)
2015-10-01 07:29 PDT, Antoine Quint
no flags
Archive of layout-test-results from ews101 for mac-mavericks (603.46 KB, application/zip)
2015-10-01 08:18 PDT, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-mavericks-wk2 (719.39 KB, application/zip)
2015-10-01 08:26 PDT, Build Bot
no flags
Patch (29.12 KB, patch)
2015-10-01 08:34 PDT, Antoine Quint
no flags
Archive of layout-test-results from ews104 for mac-mavericks-wk2 (671.62 KB, application/zip)
2015-10-01 09:13 PDT, Build Bot
no flags
Patch (30.78 KB, patch)
2015-10-02 04:44 PDT, Antoine Quint
no flags
sonny.piers@gmail.com
Comment 1 2012-08-31 04:20:23 PDT
DJ Mountney
Comment 2 2014-01-16 11:10:28 PST
One of the Opera devs has now fixed it in blink: https://src.chromium.org/viewvc/blink?revision=165221&view=revision
Radar WebKit Bug Importer
Comment 3 2015-10-01 04:18:01 PDT
Antoine Quint
Comment 4 2015-10-01 07:29:02 PDT
Build Bot
Comment 5 2015-10-01 08:18:34 PDT
Comment on attachment 262250 [details] Patch Attachment 262250 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/232669 New failing tests: fast/loader/javascript-url-iframe-remove-on-navigate.html
Build Bot
Comment 6 2015-10-01 08:18:38 PDT
Created attachment 262252 [details] Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 7 2015-10-01 08:26:25 PDT
Comment on attachment 262250 [details] Patch Attachment 262250 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/232677 New failing tests: fast/loader/javascript-url-iframe-remove-on-navigate.html
Build Bot
Comment 8 2015-10-01 08:26:28 PDT
Created attachment 262253 [details] Archive of layout-test-results from ews107 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Antoine Quint
Comment 9 2015-10-01 08:34:43 PDT
Build Bot
Comment 10 2015-10-01 09:12:53 PDT
Comment on attachment 262254 [details] Patch Attachment 262254 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/232805 New failing tests: fast/loader/stateobjects/pushstate-object-types.html
Build Bot
Comment 11 2015-10-01 09:13:03 PDT
Created attachment 262258 [details] Archive of layout-test-results from ews104 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Antoine Quint
Comment 12 2015-10-02 04:44:51 PDT
WebKit Commit Bot
Comment 13 2015-10-02 08:13:34 PDT
Comment on attachment 262327 [details] Patch Clearing flags on attachment: 262327 Committed r190505: <http://trac.webkit.org/changeset/190505>
WebKit Commit Bot
Comment 14 2015-10-02 08:13:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.